# offloading-server

./: CMakeLists.txt  simple_server.cpp
